--- a/Index.html
+++ b/Index.html
@@ -36,11 +36,11 @@
         </div>
       </div>
       <div class="encriptado">
-        <img src="" alt="" id="muñeco" />
+        <img src="Img/muñeco.png" alt="" id="muñeco" />
         <div class="mensaje-encriptado" id="mensaje-encriptado">
-          <h2 id="titulo-mensaje">Ningún mensaje fue encontrado</h2>
+          <h2 id="titulo-mensaje">Ningún texto ha sido cifrado</h2>
           <p id="parrafo">Ingresa el texto que deseas encriptar o desencriptar</p>
-          <textarea name="mensaje" id="mensaje" cols="30" rows="10" class="mensaje"></textarea>
+          <!--<textarea name="mensaje" id="mensaje" cols="30" rows="10" class="mensaje"></textarea>-->
         </div>
       </div>
     </div>
